<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/menu_favorites" />
    </group>

    <item android:title="@string/label_control">
        <menu>
            <item
                android:id="@+id/nav_locale"
                android:icon="@drawable/ic_translate_black_24dp"
                android:title="@string/menu_locale"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>
